状态管理相关更新
1. 状态管理改用Zustand，移除Recoil
2. 现在有多个store，store目录改为stores
3. 在App中监听屏幕变化
4. student/List现在会根据屏幕宽度计算缩放
5. 添加layouts目录，目前计划提供横竖屏两种局部方案

Signed-off-by: Arathi <ssdfa7@gmail.com>

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "BrakResPlan",
+    "name": "蔚蓝档案资源规划",
     "slug": "BrakResPlan",
     "version": "1.0.0",
     "orientation": "portrait",
