--- a/package.json
+++ b/package.json
@@ -11,13 +11,12 @@
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
     "expo": "~49.0.15",
-    "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
     "react-native-svg": "13.9.0",
     "react-native-web": "~0.19.6",
-    "recoil": "^0.7.7"
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
